--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,11 +64,13 @@ dependencies {
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
-    //Corrutinas
+    // Corrutinas
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
-    //dagger hilt
+    // Dagger Hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
-    //maps
+    // Maps
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.8'
 }
