--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
     // Maps
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
+    implementation 'com.google.android.gms:play-services-location:20.0.0'
     //Picasso
     implementation 'com.squareup.picasso:picasso:2.8'
 }
